# wxx

./: .gitmodules  CMakeLists.txt  Makefile  wxx_vc10.sln  wxx_vc8.sln
wx/: setup.h
